<?xml version="1.0"?>
<package format="3">
  <name>robot_bringup</name>
  <version>0.0.0</version>
  <description>Controls robot bringup</description>
  <maintainer email="samitrad7@gmail.com">sami</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>detection</depend>  
  <depend>robot_driver_cpp</depend>  
  <depend>behavior_tree</depend>  
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
